# apps/service/src/account-shares/account-shares.dto.ts
@@ -1,0 +1,7 @@
+import { IsInt, Min } from 'class-validator';
+
+export class ShareAccountDto {
+  @IsInt()
+  @Min(1)
+  sharedAccountId: number;
+}
